--- a/mgp.html
+++ b/mgp.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Module_GP</title>
 		<link rel="shortcut icon" href="images/T.png">
+		<link rel="stylesheet" type="text/css" href="mgp.css">
 	</head>
 	<body>
 		<header>
@@ -14,17 +15,10 @@
 			<div class="table">
 				<h1>Table of Contents</h1>
 				<div class="sn">
-				<ul>
-					<li><a href="">1</a></li>
-					<li><a href="">2</a></li>
-					<li><a href="">3</a></li>
-					<li><a href="">4</a></li>
-					<li><a href="">5</a></li>
-					<li><a href="">6</a></li>
-				</ul>
+				
 				</div>
 				<div class="topic">
-					<ul>
+					<ol>
 						<li><a href="">Introduction</a></li>
 						<li><a href="">UI Design</a></li>
 						<li><a href="">Experience</a></li>
@@ -33,7 +27,7 @@
 						<li><a href="">Implementation</a></li>
 						<li><a href="">Conclusion</a></li>
 						<li><a href="">References</a></li>
-					</ul>
+					</ol>
 				</div>
 
 			</div>
